# t212-isa-what-if

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
docs/plans/: 2026-05-08-counterfactual-design.md
scripts/: probe_tickers.py
src/: actual.py  db.py  load_prices.py  load_transactions.py  report.py  scenarios.py  schema.sql  simulate.py  xirr.py
